--- a/public/content/textes/agencelb.html
+++ b/public/content/textes/agencelb.html
@@ -1,19 +1,14 @@
 <ul class="list-disc list-inside">
   <li class="pb-2">
-    Intégration avec Figma de sites WordPress avec différents constructeurs de
-    thèmes (Elementor, Divi, WP Bakery, etc.) et thèmes custom.
+    Intégration Figma → WordPress (Elementor, Divi, WP Bakery, thèmes custom)
   </li>
   <li class="pb-2">
-    Intégration de sites Web statiques (directement dans les dossiers ou avec
-    GitHub) et autres plateformes (Squarespace, Shopify, Wix, etc.)
+    Développement de sites Web (WordPress, statiques, Shopify, Squarespace, Wix)
   </li>
   <li class="pb-2">
-    Mise en ligne complète des sites Web (cpanel, WHM, gestionnaire de noms de
-    domaines, SEO, migration de sites Web live, etc.)
+    Mises en ligne complètes : cPanel/WHM, DNS, migrations, SEO de base.
   </li>
   <li>
-    Correction de bugs, maintenance et sécurité des sites Web (nettoyage des
-    dossiers, WP-CLI, ManageWP, droits et permissions, bases de données,
-    serveur, discuter de longues heures avec du support IT, etc.)
+    Maintenance, sécurité et débogage (WP-CLI, ManageWP, bases de données).
   </li>
 </ul>
