--- a/public/content/textes/constella.html
+++ b/public/content/textes/constella.html
@@ -1,12 +1,11 @@
 <ul class="list-disc list-inside">
-  <li class="pb-2">Intégrer des solutions Web/boutiques en ligne</li>
-  <li class="pb-2">Former les clients à la livraison du site Web</li>
   <li class="pb-2">
-    Offrir un support technique aux clients en fonction de leurs besoins
+    Développement WordPress (thèmes, types de contenu, extensions sur mesure)
   </li>
-  <li>
-    Correction de bugs, maintenance et sécurité des sites Web (nettoyage des
-    dossiers, WP-CLI, ManageWP, droits et permissions, bases de données,
-    serveur, discuter de longues heures avec du support IT, etc.)
+  <li class="pb-2">
+    Intégration de sites et boutiques (Woocommerce, ACF, GravityForms, Divi)
+  </li>
+  <li class="pb-2">
+    Formation clients, support technique et maintenance évolutive
   </li>
 </ul>
