--- a/public/content/textes/touchette.html
+++ b/public/content/textes/touchette.html
@@ -1,19 +1,9 @@
 <ul class="list-disc list-inside">
   <li class="pb-2">
-    Intégration avec Figma de sites WordPress avec différents constructeurs de
-    thèmes (Elementor, Divi, WP Bakery, etc.) et thèmes custom.
+    Gestion et mise à jour des données (clients, produits, prix)
   </li>
   <li class="pb-2">
-    Intégration de sites Web statiques (directement dans les dossiers ou avec
-    GitHub) et autres plateformes (Squarespace, Shopify, Wix, etc.)
+    Support utilisateur et conformité des accès aux bases de données.
   </li>
-  <li class="pb-2">
-    Mise en ligne complète des sites Web (cpanel, WHM, gestionnaire de noms de
-    domaines, SEO, migration de sites Web live, etc.)
-  </li>
-  <li>
-    Correction de bugs, maintenance et sécurité des sites Web (nettoyage des
-    dossiers, WP-CLI, ManageWP, droits et permissions, bases de données,
-    serveur, discuter de longues heures avec du support IT, etc.)
-  </li>
+  <li class="pb-2">Introduction à Power BI et SAP S/4HANA.</li>
 </ul>
