--- a/404.html
+++ b/404.html
@@ -5,24 +5,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Redirection…</title>
     <script>
-      // GitHub Pages SPA redirect trick for BrowserRouter
-      // Store the path in sessionStorage and redirect to index.html
+      // Redirect to the app root - React Router will handle the routing
+      // This prevents multiple redirects on refresh
       (function () {
-        var base = "/portfolio-react";
+        var base = "/portfolio-react/";
         var path = location.pathname;
 
-        // Remove base from path if present
-        if (path.indexOf(base) === 0) {
-          path = path.slice(base.length);
+        // If we're not already at the base, redirect there
+        // React Router will render the 404 page if the route doesn't exist
+        if (path !== base) {
+          location.replace(base);
         }
-
-        // Store the original path and redirect to the root
-        // The app will restore the path on load
-        sessionStorage.setItem(
-          "redirectPath",
-          path + location.search + location.hash
-        );
-        location.replace(base + "/");
       })();
     </script>
   </head>
